# qttokenedit

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  qt-token-edit-config.cmake  qt-widgets-extensions-config.cmake  qttokenedit-config.cmake
cmake/: CompileOptions.cmake  Cppcheck.cmake
data/: customer-table.csv
deploy/: Info.plist
source/: .clang-format  CMakeLists.txt
source/codegeneration/: template_api.h.in  template_msvc_api.h.in
source/examples/: CMakeLists.txt
source/examples/customer_input/: CMakeLists.txt  CsvItemModel.h  CustomerCompletionModel.cpp  CustomerCompletionModel.h  LoadCsvFromFile.cpp  LoadCsvFromFile.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SelectedCustomersModel.cpp  SelectedCustomersModel.h  main.cpp
source/examples/fibcmd/: CMakeLists.txt  main.cpp
source/examples/multi-selection-edit/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  StopItemModel.cpp  StopItemModel.h  main.cpp
source/examples/sorted-table/: CMakeLists.txt  ColumnSortModel.cpp  ColumnSortModel.h  MainWindow.cpp  MainWindow.ui  main.cpp
source/examples/sorted_table/: CMakeLists.txt  CsvItemModel.cpp  MainWindow.cpp  MainWindow.ui  main.cpp
source/examples/token-edit-playground/: CMakeLists.txt  MainWindow.cpp  main.cpp
source/examples/tokenedit_playground/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  main.cpp
source/qtadvwidgets/: CMakeLists.txt
source/qtadvwidgets/source/: AbstractTokenButton.cpp  BaseToken.cpp  DarkStyle.cpp  DropIndicator.cpp  DropIndicator.h  ElidableLabel.cpp  FinalWidgetPlaceholder.cpp  FinalWidgetPlaceholder.h  FlexLayout.cpp  FocusChain.cpp  FocusChainElement.cpp  FocusChainNavigation.cpp  LineEditChainElement.cpp  MultiSelectionEdit.cpp  MultiSelectionLineEdit.cpp  OmissionToken.cpp  PlusButton.cpp  RemovableSelection.cpp  RemoveButton.cpp  RoundRemoveButton.cpp  Token.cpp  TokenChain.cpp  TokenChainElement.cpp  TokenDragDropHandler.cpp  TokenDragDropHandler.h  TokenDropTarget.hpp  TokenEdit.cpp  TokenEditDisplayMode.cpp  TokenEditEditingMode.cpp  TokenEditFrame.cpp  TokenEditMode.cpp  TokenEditView.cpp  TokenEditViewport.cpp  TokenLineEdit.cpp  TokenMimeData.cpp  baselib.cpp
source/qttokenedit/: CMakeLists.txt
source/qttokenedit/source/: AbstractTokenButton.cpp  BaseToken.cpp  DarkStyle.cpp  DropIndicator.cpp  ElidableLabel.cpp  FinalWidgetPlaceholder.cpp  FinalWidgetPlaceholder.h  FlexLayout.cpp  OmissionToken.cpp  RemoveButton.cpp  RemoveButton.h  Token.cpp  TokenDragDropHandler.cpp  TokenDragDropHandler.h  TokenEdit.cpp  TokenEditDisplayMode.cpp  TokenEditDisplayMode.h  TokenEditEditingMode.cpp  TokenEditEditingMode.h  TokenEditFrame.cpp  TokenEditMode.cpp  TokenEditMode.h  TokenEditView.cpp  TokenLineEdit.cpp  TokenSelectionHandler.cpp  TokenSelectionHandler.h
source/tests/: CMakeLists.txt
source/tests/fiblib-test/: CMakeLists.txt
source/tests/qttokenedit-test/: CMakeLists.txt  TokenEditItemModelTests.cpp  TokenEditShowLineEditTests.cpp  TokenEditTest.cpp  TokenEditTest.h  main.cpp
source/token-edit/: CMakeLists.txt
source/token-edit/source/: AbstractTokenButton.cpp  BaseToken.cpp  DarkStyle.cpp  DropIndicator.cpp  DropIndicator.h  ElidableLabel.cpp  FinalWidgetPlaceholder.cpp  FinalWidgetPlaceholder.h  FlexLayout.cpp  FocusChain.cpp  FocusChain.h  FocusChainElement.cpp  FocusChainElement.h  FocusChainNavigation.cpp  OmissionToken.cpp  RemoveButton.cpp  RemoveButton.h  SelectionHandler.cpp  SelectionHandler.h  Token.cpp  TokenDragDropHandler.cpp  TokenDragDropHandler.h  TokenDropTarget.hpp  TokenEdit.cpp  TokenEditDisplayMode.cpp  TokenEditEditingMode.cpp  TokenEditFrame.cpp  (+6 more)
(+73 files in other folders)
